Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ Using Msys Tech India Pvt Ltd Mail with screen readers
 trigger:
 - master
 
-pool: ajithagent
+pool: binduagent
 
 steps:
 - task: Maven@3
