Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,3 @@
-
 # Maven
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
@@ -7,7 +6,7 @@
 trigger:
 - master
 
-pool: binduagent
+pool: bindupool
 
 steps:
 - task: Maven@3
